WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123931
RenderBlockFlow::nextFloatLogicalBottomBelow should not use ShapeOutsideFloatOffsetMode
https://bugs.webkit.org/show_bug.cgi?id=123931
Summary
RenderBlockFlow::nextFloatLogicalBottomBelow should not use ShapeOutsideFloat...
Bem Jones-Bey
Reported
2013-11-06 15:01:06 PST
Once this is refactored, we can remove ShapeOutsideFloatOffsetMode.
Attachments
Patch
(16.03 KB, patch)
2013-11-08 12:45 PST
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Updated Patch
(16.03 KB, patch)
2013-11-08 13:28 PST
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-11-08 12:45:43 PST
Created
attachment 216426
[details]
Patch
Sam Weinig
Comment 2
2013-11-08 13:10:24 PST
Comment on
attachment 216426
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=216426&action=review
> Source/WebCore/rendering/FloatingObjects.cpp:159 > + FindNextFloatLogicalBottomAdapter(const RenderBlockFlow* renderer, LayoutUnit belowLogicalHeight)
You should take the RenderBlockFlow by reference.
> Source/WebCore/rendering/FloatingObjects.cpp:176 > + const RenderBlockFlow* m_renderer;
This should be a reference.
Bem Jones-Bey
Comment 3
2013-11-08 13:28:08 PST
Created
attachment 216431
[details]
Updated Patch
Bem Jones-Bey
Comment 4
2013-11-08 13:28:59 PST
(In reply to
comment #2
)
> (From update of
attachment 216426
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=216426&action=review
> > > Source/WebCore/rendering/FloatingObjects.cpp:159 > > + FindNextFloatLogicalBottomAdapter(const RenderBlockFlow* renderer, LayoutUnit belowLogicalHeight) > > You should take the RenderBlockFlow by reference. > > > Source/WebCore/rendering/FloatingObjects.cpp:176 > > + const RenderBlockFlow* m_renderer; > > This should be a reference.
Thanks, I've updated that.
WebKit Commit Bot
Comment 5
2013-11-08 13:59:35 PST
Comment on
attachment 216431
[details]
Updated Patch Clearing flags on attachment: 216431 Committed
r158954
: <
http://trac.webkit.org/changeset/158954
>
WebKit Commit Bot
Comment 6
2013-11-08 13:59:37 PST
All reviewed patches have been landed. Closing bug.
Zan Dobersek
Comment 7
2013-11-09 23:02:48 PST
Roughly 80 tests started failing on the GTK port after this landed, due to that port enabling subpixel layout. All tests pass again if the saturated layout arithmetic in LayoutUnit is enabled. The patch in
bug #119273
does just that.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug